Converted to using pandoc

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <header></header>
     <main>
-		<a href="Tuff_History/tuff-blog.html"> History of Tuff</a>
+		<a href="tuff_history/index.html"> My Journey Making a 3D Game Engine</a>
 		</br>
-		<a href="Sunrise_Lamp/lamp-blog.html"> Sunrise alarm lamp</a>
+		<a href="sunrise_lamp/index.html"> Sunrise alarm lamp</a>
     </main>
     <footer></footer>
   </body>
