--- a/tuff_history/index.html
+++ b/tuff_history/index.html
@@ -25,6 +25,17 @@
   <![endif]-->
 </head>
 <body>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-30RHKJJ7LQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-30RHKJJ7LQ');
+</script>
+
 <h1 id="my-journey-making-a-3d-game-engine">My Journey Making a 3D Game
 Engine</h1>
 <p>When I first started in 2020 with attempting to make a game, I barely
