--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-30RHKJJ7LQ"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-30RHKJJ7LQ');
+	</script>
+
   </head>
   <body>
     <header></header>
