Converted some gifs to mp4, wrote some more

--- a/tuff_history/index.html
+++ b/tuff_history/index.html
@@ -64,18 +64,22 @@ into the tilemap below. This later proved to not work too well for
 intersections of more than 2 materials, but for 2 materials the effect
 is quite nice. <img src="Images/autotile_mask.png" /> <img
 src="Images/fasterEditing.gif" /></p>
-<p>I developed an immediate mode (as opposed to a retained mode) UI
-library from scratch for this project which I used for the inventory and
-menus. Designing a good UI library is hard.. You'll see this theme come
-up a couple times again when I talk about my 3D engine as well. The UI
-of this game was very bare bones and crude but it worked well enough for
-my uses.</p>
-<p><img src="Images/pause.gif" /> <img src="Images/checkbox.gif" /></p>
+<p>I developed an immediate mode (as opposed to a retained mode) user
+interface library from scratch for this project which I used for the
+inventory and menus. Designing a good UI library is hard.. You'll see
+this theme come up a couple times again when I talk about my 3D engine
+as well. The UI of this game was very bare bones and crude but it worked
+well enough for my uses.</p>
+<p><video src="Images/pause.mp4" controls=""><a
+href="Images/pause.mp4">Video</a></video> <video
+src="Images/checkbox.mp4" controls=""><a
+href="Images/checkbox.mp4">Video</a></video></p>
 <p>I then used this UI system to make a cute little inventory system
 which served absolutely no purpose. Well, it would've served a purpose
 if i'd had any planning for the direction the game should've taken. But,
 alas, I had no idea what I was doing.</p>
-<p><img src="Images/itemDrop.gif" /> <img
+<p><video src="Images/itemDrop.mp4" controls=""><a
+href="Images/itemDrop.mp4">Video</a></video> <img
 src="Images/groundItems.gif" /></p>
 <p>This project was ended when I attempted to expand the game to support
 a fully procedurally generated map. By this point the code base was a
@@ -88,9 +92,11 @@ I deem this project was a success, even though there was no end goal to
 begin with.</p>
 <hr />
 <h3 id="tuff---the-first-attempt">Tuff - The first attempt</h3>
-<p>Insert why switch to open GL</p>
+<p>Insert why switch to openGL</p>
 <p>Originally, the only reason i wanted to switch to opengl was so I
-could rotate sprites, but I was too tempted by the ability to go 3D.</p>
+could rotate sprites, but I was too tempted by the ability to go fully
+3D (I also naively though it would be easy if I'd already come this
+far).</p>
 <p><img src="Images/opengl_renderer.gif" /> <img
 src="Images/slider.gif" /></p>
 <p>I used the wonderfully well made site <a
@@ -105,26 +111,48 @@ worked my way through the tutorial series. Starting off with .obj 3D
 model parsing / loading. Doing this early on helped immensely with
 mentally mapping from a 3D object and its triangles to the vertex data
 the GPU takes in.</p>
-<p><img src="Images/crate.gif" /></p>
+<p><video src="Images/crate.mp4" controls=""><a
+href="Images/crate.mp4">Video</a></video></p>
 <p>I followed the tutorials up to the point of basic specular lighting
 and then toyed around with some different models and normal / bump
 maps.</p>
-<p><img src="Images/more_lighting.gif" /> <img
-src="Images/shiny.gif" /></p>
+<p><video src="Images/more_lighting.mp4" controls=""><a
+href="Images/more_lighting.mp4">Video</a></video> <video
+src="Images/shiny.mp4" controls=""><a
+href="Images/shiny.mp4">Video</a></video></p>
+<p>I then polished up the look of everything and spent a while messing
+around with shaders to get the overall program into a more presentable
+package. <video src="Images/game_engine.mp4" controls=""><a
+href="Images/game_engine.mp4">Video</a></video> <video
+src="Images/pretty.mp4" controls=""><a
+href="Images/pretty.mp4">Video</a></video></p>
 <p>Now comes the second attempt at a UI library. This time I went with a
 retained mode UI and modeled it after a combination of html and css. I
 used <a href="https://github.com/zserge/jsmn">JSMN</a> to tokenize JSON
 files and then parsed the contents from there. UI files contained a
 style section for element classes and a hierarchical scene section for
-the elements themselves. Classes can be applied to elements and classes
-can with mouse actions such as hovering or clicking.</p>
-<p>I needed to change up my approach if i wanted to have a usable
-program with hot reloading and no memory leaks</p>
-<p>At this point, I wasn't following the tutorials on LearnOpenGL in
-order, I was using it more as a reference whenever I wanted to figure
-out how to do something. I spent a while messing around with shaders
-since you can very easily get some incredibly complex effects. Heres a
-few of my favourite:</p>
+the elements themselves. Classes can be applied to elements when loaded
+from a file and classes can be applied to elements upon hovering or
+clicking. <video src="Images/ui_menu.mp4" controls=""><a
+href="Images/ui_menu.mp4">Video</a></video> A goal of mine at this point
+was to make every resource (models, textures, shaders) easily hot
+reloadable. This included UI and I managed to get it to a point where it
+was usable enough to drastically speed up UI prototyping. <video
+src="Images/ui_colours.mp4" controls=""><a
+href="Images/ui_colours.mp4">Video</a></video></p>
+<p>This second attempt at a UI system worked great, that is until my
+ignorance of memory leaks caught up to me and impossible to track down
+bugs started popping up. <video src="Images/sentient_ui.mp4"
+controls=""><a href="Images/sentient_ui.mp4">Video</a></video></p>
+<p>I needed to change up my approach if I wanted to have a usable
+program with hot reloading and no memory leaks. So I started to
+modularize as much as I could, I wrote completely independent libraries
+for each part of the engine (e.g. mesh loading, shader loading, ui
+layout, etc). The intention was to write and test each module by itself
+and then combine them all into the final engine.</p>
+<p>With the most recent attempt at a UI I started off by focusing on
+functionality of laying out elements before even thinking about visual
+things like radiused corners or the parsing and serializing aspects.</p>
 <footer>
 	<hr />
 	<div style="font-size:12px; display:flex; justify-content:space-between;">
