New homepage + new blog

--- a/header.html
+++ b/header.html
@@ -1,11 +1,6 @@
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-30RHKJJ7LQ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-30RHKJJ7LQ');
-</script>
-
+<header>
+	<a class=\"header-link\" href="https://vespidian.github.io/Showcase/">Home</a>
+	<a class=\"header-link\" href="https://github.com/Vespidian/">
+		<img src=\"icons/github.svg\" align=\"left\" style=\"height:32px;\">
+	</a>
+</header>
