--- a/index.html
+++ b/index.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
+	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="style.css" />
+		<title></title>
+	</head>
+	<body>
 
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-30RHKJJ7LQ"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
+		<header> 	<a class="header-link" href=https://vespidian.github.io/Showcase/>Home</a> 	<a class="header-link" href=https://github.com/Vespidian/> 		<img src="icons/github.svg" align="left" style="height:32px;"> 	</a> </header>
 
-	gtag('config', 'G-30RHKJJ7LQ');
-	</script>
+		<main>
+			<a class="blog" href="radio_oscillator/listing/../index.html"> 	<p> 		<img class="thumbnail" src="radio_oscillator/listing/thumbnail.png"> 		<h3>Design and contruction of a 433MHz radio transmitter</h3> 		A catalogue of my process in designing and eventually building a 433MHz radio oscillator which is to be used as a amplitude modulated transmitter. 	</p> </a> </br> <a class="blog" href="tuff_history/listing/../index.html"> 	<p> 		<img class="thumbnail" src="tuff_history/listing/thumbnail.png"> 		<h3>My Journey Making a 3D Game Engine</h3> 		The history of the game engine I call Tuff. Exploring the origins and the reasoning for some of the backend decisions I've made over the years. 	</p> </a> </br>
+		</main>
 
-  </head>
-  <body>
-    <header></header>
-    <main>
-		<a href="tuff_history/index.html"> My Journey Making a 3D Game Engine</a>
-		</br>
-		<a href="sunrise_lamp/index.html"> Sunrise alarm lamp</a>
-    </main>
-    <footer></footer>
-  </body>
+		<footer> 	<hr> 	<div style="font-size:12px; display:flex; justify-content:space-between;"> 		<div>Copyright © 2024 Cristian Bogdan</div> 		<a href="../index.html">Home</a> 	</div> </footer>
+
+	</body>
 </html>
