--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
 <footer>
-	<hr />
-	<div style="font-size:12px; display:flex; justify-content:space-between;">
-	<div>Copyright © 2024 Cristian Bogdan</div>
-	<a href="../index.html">Home</a>
+	<hr>
+	<div style=\"font-size:12px; display:flex; justify-content:space-between;\">
+		<div>Copyright © 2024 Cristian Bogdan</div>
+		<a href=\"../index.html\">Home</a>
 	</div>
 </footer>
