--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 		<link rel="stylesheet" href="templates/home_style.css" />
+		<link rel="icon" type="image/png" href="icons/undefined.png">
 		<title></title>
 	</head>
 	<body>
