--- a/blogs/radio_oscillator/listing/headline.html
+++ b/blogs/radio_oscillator/listing/headline.html
@@ -1,7 +1,7 @@
 <a class=\"blog\" href=\"blogs/radio_oscillator/listing/../index.html\">
 	<p>
 		<img class=\"thumbnail\" src=\"blogs/radio_oscillator/listing/thumbnail.png\">
-		<h3>Design and contruction of a 433MHz radio transmitter</h3>
+		<h3>Design and construction of a 433MHz radio transmitter</h3>
 		A catalogue of my process in designing and eventually building a 433MHz radio oscillator which is to be used as an amplitude modulated transmitter.
 	</p>
 </a>
