--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 		<br>
 		<br>
 		<hr>
-		<br>
 
 		<main>
-			<a class="blog" href="blogs/radio_oscillator/listing/../index.html"> 	<p> 		<img class="thumbnail" src="blogs/radio_oscillator/listing/thumbnail.png"> 		<h3>Design and contruction of a 433MHz radio transmitter</h3> 		A catalogue of my process in designing and eventually building a 433MHz radio oscillator which is to be used as an amplitude modulated transmitter. 	</p> </a> </br> <a class="blog" href="blogs/tuff_history/listing/../index.html"> 	<p> 		<img class="thumbnail" src="blogs/tuff_history/listing/thumbnail.png"> 		<h3>My Journey Making a 3D Game Engine</h3> 		The history of the game engine I call Tuff. Exploring the origins and the reasoning for some of the backend decisions I've made over the years. 	</p> </a> </br>
+			<a class="blog" href="blogs/radio_oscillator/listing/../index.html"> 	<p> 		<img class="thumbnail" src="blogs/radio_oscillator/listing/thumbnail.png"> 		<h3>Design and construction of a 433MHz radio transmitter</h3> 		A catalogue of my process in designing and eventually building a 433MHz radio oscillator which is to be used as an amplitude modulated transmitter. 	</p> </a> </br> <a class="blog" href="blogs/tuff_history/listing/../index.html"> 	<p> 		<img class="thumbnail" src="blogs/tuff_history/listing/thumbnail.png"> 		<h3>My Journey Making a 3D Game Engine</h3> 		The history of the game engine I call Tuff. Exploring the origins and the reasoning for some of the backend decisions I've made over the years. 	</p> </a> </br>
 		</main>
 
 		<footer> 	<hr> 	<div style="font-size:12px; display:flex; justify-content:space-between;"> 		<div>Copyright © 2024 Cristian Bogdan</div> 		<a href="https://vespidian.github.io/Showcase/">Home</a> 	</div> </footer>
