More style edits, fixed favicon on blog pages

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
+		<link rel="stylesheet" href="templates/common.css" />
 		<link rel="stylesheet" href="templates/home_style.css" />
 		<link rel="icon" type="image/png" href="icons/undefined.png">
 		<title></title>
 	</head>
 	<body>
 
-		<header> 	<a class="header-link" href=https://vespidian.github.io/Showcase/>Home</a> 	<a class="header-link" href=https://github.com/Vespidian/> 		<img src="icons/github.svg" align="left" style="height:32px;"> 	</a> </header>
+		<header> 	<a class="header-link" href=https://vespidian.github.io/Showcase/>Home</a> 	<a class="header-link" href=https://github.com/Vespidian/> 		<img class=icon src="icons/github.svg" align="left" style="height:32px;"> 	</a> </header>
 
 		<h2>Hey!</h2>
 		I'm an undergraduate student studying electrical engineering, this is the place where I share my projects with the world. Anything from small one off projects like a lamp that automatically brightens to wake me up, to bigger projects like a 3D game engine or a discrete radio from scratch.
