--- a/blogs/tuff_history/index.html
+++ b/blogs/tuff_history/index.html
@@ -22,16 +22,18 @@
     }
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
+  <link rel="stylesheet" href="../../templates/common.css" />
   <link rel="stylesheet" href="../../templates/blog_style.css" />
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
 </head>
 <body>
+<link rel="icon" type="image/png" href="../../icons/undefined.png">
 <header>
 	<a class="header-link" href="https://vespidian.github.io/Showcase/">Home</a>
 	<a class="header-link" href="https://github.com/Vespidian/">
-		<img src="../../icons/github.svg" align="left" style="height:32px;">
+		<img class="icon" src="../../icons/github.svg" align="left" style="height:32px;">
 	</a>
 </header>
 <h1 id="my-journey-making-a-3d-game-engine">My Journey Making a 3D Game
