Lamp blog added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 
-		<header> 	<a class="header-link" href=https://vespidian.github.io/Showcase/>Home</a> 	<a class="header-link" href=https://github.com/Vespidian/> 		<img class=icon src="icons/github.svg" align="left" style="height:32px;"> 	</a> </header>
+		<header> 	<a class="header-link" href=https://vespidian.github.io/>Home</a> 	<a class="header-link" href=https://github.com/Vespidian/> 		<img class=icon src="icons/github.svg" align="left" style="height:32px;"> 	</a> </header>
 
 		<h2>Hey!</h2>
 		I'm an undergraduate student studying electrical engineering, this is the place where I share my projects with the world. Anything from small one off projects like a lamp that automatically brightens to wake me up, to bigger projects like a 3D game engine or a discrete radio from scratch.
@@ -19,7 +19,7 @@
 		<hr>
 
 		<main>
-			<a class="blog" href="blogs/radio_oscillator/listing/../index.html"> 	<p> 		<img class="thumbnail" src="blogs/radio_oscillator/listing/thumbnail.png"> 		<h3>Design and construction of a 433MHz radio transmitter</h3> 		A catalogue of my process in designing and eventually building a 433MHz radio oscillator which is to be used as an amplitude modulated transmitter. 	</p> </a> </br> <a class="blog" href="blogs/tuff_history/listing/../index.html"> 	<p> 		<img class="thumbnail" src="blogs/tuff_history/listing/thumbnail.png"> 		<h3>My Journey Making a 3D Game Engine</h3> 		The history of the game engine I call Tuff. Exploring the origins and the reasoning for some of the backend decisions I've made over the years. 	</p> </a> </br>
+			<a class="blog" href="blogs/radio_oscillator/listing/../index.html"> 	<p> 		<img class="thumbnail" src="blogs/radio_oscillator/listing/thumbnail.png"> 		<h3>Design and construction of a 433MHz radio transmitter</h3> 		A catalogue of my process in designing and eventually building a 433MHz radio oscillator which is to be used as an amplitude modulated transmitter. 	</p> </a> </br> <a class="blog" href="blogs/sun_lamp/listing/../index.html"> 	<p> 		<img class="thumbnail" src="blogs/sun_lamp/listing/thumbnail.png"> 		<h3>Creating a remote controlled lamp that wakes me up</h3> 		Designing and prototyping a dimmable LED lamp and constant current LED driver board. Embedding an STM32f103 MCU for sunrise simulation and infra-red remote control 	</p> </a> </br> <a class="blog" href="blogs/tuff_history/listing/../index.html"> 	<p> 		<img class="thumbnail" src="blogs/tuff_history/listing/thumbnail.png"> 		<h3>My Journey Making a 3D Game Engine</h3> 		The history of the game engine I call Tuff. Exploring the origins and the reasoning for some of the backend decisions I've made over the years. 	</p> </a> </br>
 		</main>
 
 		<footer> 	<hr> 	<div style="font-size:12px; display:flex; justify-content:space-between;"> 		<div>Copyright © 2024 Cristian Bogdan</div> 		<a href="https://vespidian.github.io/Showcase/">Home</a> 	</div> </footer>
