--- a/blogs/tuff_history/index.html
+++ b/blogs/tuff_history/index.html
@@ -29,47 +29,64 @@
   <![endif]-->
 </head>
 <body>
-<link rel="icon" type="image/png" href="../../icons/undefined.png">
+<link rel="icon" type="image/png" href="../../icons/undefined.png" />
 <header>
-	<a class="header-link" href="https://vespidian.github.io/Showcase/">Home</a>
+	<a class="header-link" href="https://vespidian.github.io/">Home</a>
 	<a class="header-link" href="https://github.com/Vespidian/">
-		<img class="icon" src="../../icons/github.svg" align="left" style="height:32px;">
+		<img
+			class="icon"
+			src="../../icons/github.svg"
+			align="left"
+			style="height: 32px"
+		/>
 	</a>
 </header>
 <h1 id="my-journey-making-a-3d-game-engine">My Journey Making a 3D Game
 Engine</h1>
-<p>When I first started in 2020 with attempting to make a game, I barely
-knew any C. All I had done up to this point was write an x86 bootloader
-in assembly, naively attempt to do recreate Garrys's Mod in Unity using
-C# and play around with command line C programs.</p>
+<p>Alternatively titled "The process of realizing I'm making an engine
+instead of a game."</p>
+<p>All art shown is created by me and all videos, gifs, and images are
+created by me using the Tuff game engine.</p>
+<p>When I first started making a game in 2020, I barely knew any C. All
+I had done up to that point was write an x86 bootloader in assembly,
+naively attempt to do recreate Garrys's Mod in Unity using C# and play
+around with making some command line C programs.</p>
 <hr />
 <h3 id="foxandbox">FoxandBox</h3>
-<p>This early dive into game and engine development was heavily
+<p>My first early dive into game and engine development was heavily
 influenced by Stardew Valley and the Pokemon games. Everything from the
-tile based level to the art style.</p>
+tile based level to the art style. The name came from the main character
+being a fox and the game being a sandbox (such creativity!).</p>
 <p><img src="Images/particleSystem.gif" /></p>
 <p>I started off using just SDL2 and learned everything from <a
-href="https://lazyfoo.net/tutorials/SDL/">Lazy Foo's tutorials</a> In
-the beginning my language of choice was C and that has remained. This is
-logically a somewhat odd choice but its just personal preference for the
-simplicity and control i have with C. I could just as easily have done
-all of this in something more suitable like C++ <em>but wheres the fun
-in that?</em></p>
+href="https://lazyfoo.net/tutorials/SDL/">Lazy Foo's tutorials</a> My
+language of choice was C and that has remained. This is - logically
+speaking - a somewhat odd choice but its just personal preference for
+the simplicity and control I have with C. I could just as easily have
+done all of this in something more suitable like C++ <em>but wheres the
+fun in that?</em></p>
 <p><img src="Images/speed.gif" /></p>
-<p>After level creation and movement was done, I worked on level
-interaction and automatic calculation of the borders between tile types.
-I did these calculations using a method similar to a cellular automaton.
-Each configuration of the 8 neighbours of a tile is assigned an index
-into the tilemap below. This later proved to not work too well for
-intersections of more than 2 materials, but for 2 materials the effect
-is quite nice. <img src="Images/autotile_mask.png" /> <img
+<p>The first thing I did was create the world of the game. This was
+initially a finite square grid of fixed size which I later expanded to a
+chunked system for near infinite world sizes.</p>
+<p>After level creation and movement was in a usable state, I worked on
+level interaction and automatic calculation of the borders between tile
+types. I did these calculations using a method similar to a cellular
+automaton. Each configuration of the 8 neighbours of a tile is assigned
+an index into the tile map below. This later proved to not work too well
+for intersections of more than 2 materials, but for 2 materials the
+effect is quite nice. <img src="Images/autotile_mask.png" /> <img
 src="Images/fasterEditing.gif" /></p>
-<p>I developed an immediate mode (as opposed to a retained mode) user
-interface library from scratch for this project which I used for the
-inventory and menus. Designing a good UI library is hard.. You'll see
-this theme come up a couple times again when I talk about my 3D engine
-as well. The UI of this game was very bare bones and crude but it worked
-well enough for my uses.</p>
+<p>I took a crack at developing an immediate mode* (as opposed to a
+retained mode**) user interface library from scratch for this project
+which I used for the inventory and menus. Designing a good UI library is
+hard.. You'll see this theme come up a couple times again when I talk
+about my 3D engine as well. The UI of this game was very bare bones and
+crude but it worked well enough for my uses. * An immediate mode UI is
+one which is updated and drawn every frame ** A retained mode UI is a
+set of states and objects which store the elements of the UI. This
+allows for positions to be computed a single time and used over many
+frames if nothing changes.</p>
 <p><video src="Images/pause.mp4" controls=""><a
 href="Images/pause.mp4">Video</a></video> <video
 src="Images/checkbox.mp4" controls=""><a
@@ -88,29 +105,31 @@ pretty far considering this was my first project of this scale).</p>
 <p>Although this game never ended up coming to anything, it taught me an
 incredible amount about basic programming, C, and engine development.
 This game is the catalyst which later drove me to make a 3D game engine.
-I deem this project was a success, even though there was no end goal to
-begin with.</p>
+I deem this project a success. Even though there was no end goal to
+begin with, it was a necessary stepping stone.</p>
 <hr />
 <h3 id="tuff---the-first-attempt">Tuff - The first attempt</h3>
 <p>Insert why switch to openGL</p>
 <p>Originally, the only reason i wanted to switch to opengl was so I
-could rotate sprites, but I was too tempted by the ability to go fully
-3D (I also naively though it would be easy if I'd already come this
-far).</p>
+could rotate sprites (which sdl2 can't do), This temptation along with
+all the other possibilities I saw OpenGL could bring made me eventually
+bite the bullet and switch over. Very quickly after achieving my goal of
+rotating sprites I wanted to see what else I could do with OpenGL; I
+didn't know it then but this would be the end of FoxandBox.</p>
 <p><img src="Images/opengl_renderer.gif" /> <img
 src="Images/slider.gif" /></p>
 <p>I used the wonderfully well made site <a
-href="https://learnopengl.com/">LearnOpenGL</a> by Joey de Vries to get
-started with basic 3D rendering. Once i'd gotten a fairly loose grasp on
-using opengl and toyed around with writing some shaders, my priorities
-changed, I no longer wanted to make a game, I wanted to make a game
-engine instead.</p>
-<p>By this point I had a comfortable grasp of most of C and abided by a
-fair amount of good coding practices (not enough). I went through and
-worked my way through the tutorial series. Starting off with .obj 3D
-model parsing / loading. Doing this early on helped immensely with
-mentally mapping from a 3D object and its triangles to the vertex data
-the GPU takes in.</p>
+href="https://learnopengl.com/">LearnOpenGL</a> by Joey de Vries to
+start learning basic 3D rendering. Once I'd gotten a fairly loose grasp
+on using OpenGL and toyed around with writing some shaders, I had a
+realization. I no longer wanted to make a game, I wanted to make a game
+engine.</p>
+<p>By this point I had a comfortable grasp of <em>most</em> of C and
+abided by a fair amount of good coding practices - or so I thought. I
+went through and worked my way through the tutorial series. Starting off
+with .obj 3D model parsing / loading. Doing this early on helped
+immensely with mentally mapping from a 3D object and its triangles to
+the vertex data the GPU takes in.</p>
 <p><video src="Images/crate.mp4" controls=""><a
 href="Images/crate.mp4">Video</a></video></p>
 <p>I followed the tutorials up to the point of basic specular lighting
@@ -120,9 +139,10 @@ maps.</p>
 href="Images/more_lighting.mp4">Video</a></video> <video
 src="Images/shiny.mp4" controls=""><a
 href="Images/shiny.mp4">Video</a></video></p>
-<p>I then polished up the look of everything and spent a while messing
-around with shaders to get the overall program into a more presentable
-package. <video src="Images/game_engine.mp4" controls=""><a
+<p>I then polished up the look of everything - taking some notes from
+Blender's UI - and spent a while messing around with shaders to get the
+overall program into a more presentable package. <video
+src="Images/game_engine.mp4" controls=""><a
 href="Images/game_engine.mp4">Video</a></video> <video
 src="Images/pretty.mp4" controls=""><a
 href="Images/pretty.mp4">Video</a></video></p>
@@ -136,23 +156,52 @@ from a file and classes can be applied to elements upon hovering or
 clicking. <video src="Images/ui_menu.mp4" controls=""><a
 href="Images/ui_menu.mp4">Video</a></video> A goal of mine at this point
 was to make every resource (models, textures, shaders) easily hot
-reloadable. This included UI and I managed to get it to a point where it
-was usable enough to drastically speed up UI prototyping. <video
+re-loadable. This included UI and I managed to get it to a point where
+it was usable enough to drastically speed up UI prototyping. <video
 src="Images/ui_colours.mp4" controls=""><a
 href="Images/ui_colours.mp4">Video</a></video></p>
-<p>This second attempt at a UI system worked great, that is until my
-ignorance of memory leaks caught up to me and impossible to track down
-bugs started popping up. <video src="Images/sentient_ui.mp4"
+<p>This second attempt at a UI system worked great. But alas, eventually
+my ignorance of memory leaks caught up to me and impossible to track
+down bugs started popping up. <video src="Images/sentient_ui.mp4"
 controls=""><a href="Images/sentient_ui.mp4">Video</a></video></p>
-<p>I needed to change up my approach if I wanted to have a usable
-program with hot reloading and no memory leaks. So I started to
-modularize as much as I could, I wrote completely independent libraries
-for each part of the engine (e.g. mesh loading, shader loading, ui
-layout, etc). The intention was to write and test each module by itself
-and then combine them all into the final engine.</p>
-<p>With the most recent attempt at a UI I started off by focusing on
+<p>If I wanted to have a usable program with hot reloading and no memory
+leaks, I needed to change up my approach. So I started to modularize as
+much as I could; I wrote completely independent libraries for each part
+of the engine (e.g. mesh loading, shader processing, ui layout, etc).
+The intention was to write and test each module by itself and then
+combine them all into the final engine.</p>
+<p>I think this approach ended up being the most flexible for me, as
+well as being incredibly easy to scale. As long as I kept the interface
+between modules the same, I could completely overhaul individual modules
+and no other piece of code would be affected. One downside is that it
+takes slightly more initial planning to make sure interfaces are fully
+fleshed out from the beginning, since any changes to the interface will
+affect other modules.</p>
+<p>This modular approach also makes visualizing the dependencies between
+modules easier, since all dependencies are <code>#include</code>-ed at
+the top of each file.</p>
+<p>I've also started to use this approach with embedded systems
+programming projects I'm doing. For example, I now have individual
+libraries for each peripheral (UART, IR comms, I2C).</p>
+<hr />
+<p>With the most recent attempt at a UI I started off by focusing on the
 functionality of laying out elements before even thinking about visual
-things like radiused corners or the parsing and serializing aspects.</p>
+things like radiused corners or the parsing and serializing aspects.
+This meant I ended up splitting the UI module into multiple sub-modules
+which can each work almost independently as well.</p>
+<p>I used pretty much the same file format for UI files as with the
+previous attempt.</p>
+<p><video src="Images/particle_sim.mp4" controls=""><a
+href="Images/particle_sim.mp4">Video</a></video> To showcase this
+version as well as the engine itself, I made a molecular dynamics
+simulation program which displays a 3D rendering of molecules as
+physical simulation of atomic collisions is carried out.</p>
+<p><video src="Images/octane_sim.mp4" controls=""><a
+href="Images/octane_sim.mp4">Video</a></video> The intention with this
+program being to one day be able to simulate protein folding and render
+it in real time. But I'm in slightly over my head with this; So I chose
+to limit the scope and simulate only smaller simpler molecules for
+now.</p>
 <footer>
 	<hr>
 	<div style="font-size:12px; display:flex; justify-content:space-between;">
