--- a/headlines.html
+++ b/headlines.html
@@ -6,6 +6,14 @@
 	</p>
 </a>
 </br>
+<a class=\"blog\" href=\"blogs/sun_lamp/listing/../index.html\">
+	<p>
+		<img class=\"thumbnail\" src=\"blogs/sun_lamp/listing/thumbnail.png\">
+		<h3>Creating a remote controlled lamp that wakes me up</h3>
+		Designing and prototyping a dimmable LED lamp and constant current LED driver board. Embedding an STM32f103 MCU for sunrise simulation and infra-red remote control
+	</p>
+</a>
+</br>
 <a class=\"blog\" href=\"blogs/tuff_history/listing/../index.html\">
 	<p>
 		<img class=\"thumbnail\" src=\"blogs/tuff_history/listing/thumbnail.png\">
