Updated home icon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 
-		<header> 	<a class="header-link" href=https://vespidian.github.io/>Home</a> 	<a class="header-link" href=https://github.com/Vespidian/> 		<img class=icon src="icons/github.svg" align="left" style="height:32px;"> 	</a> </header>
+		<header> 	<a class="header-link" href=https://vespidian.github.io/> 		<img class=icon src="icons/home.svg" align="left" style="height:32px;"> 	</a> 	<a class="header-link" href=https://github.com/Vespidian/> 		<img class=icon src="icons/github.svg" align="left" style="height:32px;"> 	</a> </header>
 
 		<h2>Hey!</h2>
 		I'm an undergraduate student studying electrical engineering, this is the place where I share my projects with the world. Anything from small one off projects like a lamp that automatically brightens to wake me up, to bigger projects like a 3D game engine or a discrete radio from scratch.
